<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/profile_tab_tittle_label"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/tittle_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/email_info_container"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email value"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/email_label"
                android:layout_marginLeft="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pass_info_container"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/pass_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="password value"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/pass_label"
                android:layout_marginLeft="5dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button_label"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounde_gray_background"
            android:textColor="@color/white"/>



    </LinearLayout>


</LinearLayout>